cleaned up responsive design and fixed small issues with the unwaste btn position, also switched out a darker verison of the background for visibility

--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ body {
     background-color: #fff;
 }
 
+.overlay  {
+  /* position: fixed; */
+  top: 0;
+  left: 0;
+  /* z-index: -2000; */
+  background-color: rgba(0, 0, 0, 0.50);
+  height: 100%;
+  width: 100%;
+}
+
 p {
     margin-top: 0;
     margin-bottom: .5rem;
@@ -109,7 +119,7 @@ svg{
 .content  {
   height: 100%;
   /* min-height: 667px; */
-  background: url(assets/images/pUAM5hPaCRI.png) center / cover no-repeat ;
+  background: url(assets/images/pUAM5hPaCRI-dark.png) center / cover no-repeat ;
 }
 
 .content-row {
@@ -177,13 +187,14 @@ svg{
 
 .button-container {
   margin-bottom: 40px;
+  width: 100%;
 }
 
 .main-button-div  {
   /* margin-bottom: 40px; */
-  /* width: 100%; */
   transition: transform .1s linear;
   transform: scale(1);
+  width: 135px;
 }
 
 .main-button-div:hover  {
@@ -191,9 +202,9 @@ svg{
 }
 
 .unwaste-btn  {
-  height: 58px;
-  width: 135px;
-  font-size: 1.6rem;
+  height: 50px;
+  width: 120px;
+  font-size: 1.5rem;
   color: white;
   background: rgba(166, 233, 202, 0.8);
   box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.25);
@@ -505,7 +516,7 @@ svg{
   .content  {
   width: 100%;
   height: 100%;
-  background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash.jpg) center / cover no-repeat ;
+  background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash-dark.png) center / cover no-repeat ;
   }
 
   .activity-page-div{
@@ -513,9 +524,6 @@ svg{
   }
   .logo {
     width: 20%;
-  }
-  .button-container {
-    width: 100%;
   }
 }
 
@@ -527,7 +535,7 @@ svg{
   .content  {
     width: 100%;
     height: 100%;
-    background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash.jpg) center / cover repeat ;
+    background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash-dark.png) center / cover repeat ;
   }
   .header-class {
     margin-top: 5%;
@@ -560,17 +568,13 @@ svg{
     margin: 0;
     max-width: 40%;
   }
-  .main-button-div  {
-    margin:10px;
+  .button-container {
+    margin-bottom: 20px;
   }
   .content-row  {
     padding: 0;
   }
 }
-
-/* .d-none {
-    display: none !important;
-} */
 
 .hidden {
   display: none;
@@ -581,18 +585,6 @@ svg{
   body  {
     max-width: 991px;
     height: 100vh;
-  }
-  /* body  {
-    max-width: 1200px;
-    height: 100vh;
-  } */
-  .content  {
-  width: 100%;
-  height: 100%;
-  background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash.jpg) center / cover no-repeat ;
-  }
-  .logo {
-    width: 20%;
   }
   .header-class {
   display: flex;
@@ -606,12 +598,9 @@ svg{
     padding: 0;
   }
   .h1-content {
-    /* display: inline-block; */
-    /* width: 35%; */
     margin: 0 20px;
     font-size: 3rem;
     align-self: center;
-
   }
   .h2-content {
     font-size: 1.2rem;
@@ -625,15 +614,9 @@ svg{
   .activity-info  {
     font-size: 1.3rem;
   }
-  .activity-page-div{
-    width: 60%;
-  }
   .content-row{
     justify-content: center;
     align-content: flex-start;
-  }
-  .main-button-div  {
-    align-self: end;
   }
   .logo {
     width: 60%;
@@ -643,6 +626,10 @@ svg{
     align-self: center;
     margin: 0;
   }
+  .gif-container  {
+    max-height: 325px;
+  }
+
   .button-container  {
     position: absolute;
     bottom: 15px;
@@ -655,64 +642,21 @@ svg{
     max-width: 1199px;
     height: 100vh;
   }
-  .content  {
-  width: 100%;
-  height: 100%;
-  background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash.jpg) center / cover no-repeat ;
-  }
   .activity-page-div{
-    width: 65%;
-  }
-  .logo {
-    width: 20%;
-  }
-  .header-class {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.50);
-  margin-top: 0;
-  align-content: center;
+    width: 60%;
   }
   .content  {
     padding: 0;
   }
   .h1-content {
-    margin: 0 20px;
     font-size: 3.5rem;
-    align-self: center;
-
   }
   .h2-content {
     font-size: 1.5rem;
-    margin-left: 0;
-    margin-right: 0;
-    align-self: center;
   }
-  .h1-activity-content  {
-    font-size: 2rem;
-  }
-  .activity-info  {
-    font-size: 1.3rem;
-  }
-  .content-row{
-    justify-content: center;
-    align-content: flex-start;
-  }
-  .main-button-div  {
-    align-self: end;
-  }
+
   .logo {
     width: 70%;
-    padding: 10px 0;
-  }
-  .logo-container {
-    align-self: center;
-    margin: 0;
-  }
-  .button-container  {
-    position: absolute;
-    bottom: 15px;
   }
 }
 
@@ -722,61 +666,10 @@ svg{
     max-width: 100vw;
     height: 100vh;
   }
-  .header-class {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.50);
-  margin-top: 0;
-  align-content: center;
-  }
-  .h1-content {
-    /* display: inline-block; */
-    /* width: 35%; */
-    margin: 0 20px;
-    font-size: 3.5rem;
-    align-self: center;
-  }
   .h2-content {
     font-size: 1.5rem;
-    margin-left: 0;
-    margin-right: 0;
-    align-self: center;
-  }
-  .h1-activity-content  {
-    font-size: 2rem;
-  }
-  .activity-info  {
-    font-size: 1.3rem;
-  }
-  .content  {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash.jpg) center / cover no-repeat ;
   }
   .activity-page-div{
-    width: 60%;
-  }
-  .content-row{
-    /* justify-content: center; */
-    /* align-content: flex-start; */
-  }
-  .main-button-div  {
-    align-self: end;
-  }
-  .logo {
-    width: 70%;
-    padding: 10px 0;
-  }
-  .logo-container {
-    /* display: inline-block; */
-    /* width: 40%; */
-    align-self: center;
-    margin: 0;
-  }
-  .button-container  {
-    position: absolute;
-    bottom: 15px;
+    width: 50%;
   }
 }
